force-app/main/default/objects/AnkenMeisai__c/AnkenMeisai__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_HBLSBOnlineHelp</customHelpPage>
    <description>H B/L - SELLING/BUYNG</description>
    <label>F/TMS-請求・仕入</label>
    <nameField>
        <displayFormat>C{000000}</displayFormat>
        <label>FMS BILL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>