force-app/main/default/objects/AnkenMeisai__c/fields/AccountingClosingStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountingClosingStatus__c</fullName>
    <label>ACCOUNTING CLOSING STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingClosingStatus</valueSetName>
    </valueSet>
</CustomField>