force-app/main/default/objects/AnkenMeisai__c/fields/AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>AccountingCode__c</fullName>
    <formula>Tariff__r.Accounting_Code__r.Name</formula>
    <label>ACCOUNTING CODE</label>
    <type>Text</type>
</CustomField>