force-app/main/default/objects/AnkenMeisai__c/fields/AdvancePaymentOnBehalfOfOurCompany__c.field-meta.xml
<CustomField>
    <fullName>AdvancePaymentOnBehalfOfOurCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADVANCE PAYMENT ON BEHALF OF OUR COMPANY</label>
    <type>Checkbox</type>
</CustomField>