force-app/main/default/objects/AnkenMeisai__c/fields/AM_BuyInAfter_allocation__c.field-meta.xml
<CustomField>
    <fullName>AM_BuyInAfter_allocation__c</fullName>
    <formula>IF( OR(AM_MCBM__c = 0, ISBLANK(AM_MCBM__c)) , 0, (AM_BuyInBefore_Allocation__c * ANKEN_CBM__c) / AM_MCBM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BUYING AFTER ALLOCATION-CHECKING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>