force-app/main/default/objects/AnkenMeisai__c/fields/AM_BuyInAfter_allocation_USD__c.field-meta.xml
<CustomField>
    <fullName>AM_BuyInAfter_allocation_USD__c</fullName>
    <formula>IF( OR(AM_MCBM__c = 0, ISBLANK(AM_MCBM__c)) , 0, (AM_Buyinbefore_allocation_USD__c * ANKEN_CBM__c) / AM_MCBM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BUYING AFTER ALLOCATION-CHECKING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>