force-app/main/default/objects/AnkenMeisai__c/fields/AM_BuyInBefore_Allocation__c.field-meta.xml
<CustomField>
    <fullName>AM_BuyInBefore_Allocation__c</fullName>
    <formula>AM_MasterMeisaiID__r.BuyAmountJPN__c
/*BuyInTaxAmountJPY__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BUYING AMOUNT BEFORE ALLOCATION(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>