force-app/main/default/objects/AnkenMeisai__c/fields/AM_Buyinbefore_allocation_USD__c.field-meta.xml
<CustomField>
    <fullName>AM_Buyinbefore_allocation_USD__c</fullName>
    <formula>AM_MasterMeisaiID__r.BuyAmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BUYING AMOUNT BEFORE ALLOCATION(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>