force-app/main/default/objects/AnkenMeisai__c/fields/AM_MasterID__c.field-meta.xml
<CustomField>
    <fullName>AM_MasterID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONSOL SHIPMENT NAME</label>
    <referenceTo>MasterAnken__c</referenceTo>
    <relationshipName>AM_MasterID</relationshipName>
    <type>Lookup</type>
</CustomField>