force-app/main/default/objects/AnkenMeisai__c/fields/AM_MCBM__c.field-meta.xml
<CustomField>
    <fullName>AM_MCBM__c</fullName>
    <formula>AM_MasterID__r.MCBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL MEASURMENT AT MASTER B/L(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>