force-app/main/default/objects/AnkenMeisai__c/fields/AMOUNT_PAID_BUYING_USD__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT_PAID_BUYING_USD__c</fullName>
    <inlineHelpText>When this field is blank or &apos;0&apos; and Payment Confirmed-Buying is checked, Amount Buying including Tax(FCY) is inserted to this field</inlineHelpText>
    <label>AMOUNT PAID-BUYING(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>