force-app/main/default/objects/AnkenMeisai__c/fields/AmountBuyInclTax3rdCurrencyInput__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyInclTax3rdCurrencyInput__c</fullName>
    <label>Amount Buy Incl Tax(3rd Currency)-Input</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>