force-app/main/default/objects/AnkenMeisai__c/fields/AmountBuyingInclTax3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTax3rdCurrency__c</fullName>
    <formula>TotalAmountofBuying3rdCurrency__c + AmountofTaxBuying3rdCurrency__c + AmountBuyingInclTax3rdCurrencyAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Incl Tax(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>