force-app/main/default/objects/AnkenMeisai__c/fields/AmountBuyingIncTaxFCYInput__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncTaxFCYInput__c</fullName>
    <label>Amount Buying Incl Tax(FCY)-Input</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>