force-app/main/default/objects/AnkenMeisai__c/fields/AmountBuyingIncTaxLocalInput__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncTaxLocalInput__c</fullName>
    <label>Amount Buying Incl Tax(Local)-Input</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>