force-app/main/default/objects/AnkenMeisai__c/fields/AmountofTaxBuying3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxBuying3rdCurrency__c</fullName>
    <formula>ROUND(TotalAmountofBuying3rdCurrency__c * BuyTaxInitial__c,3)+ TaxBuying3rdCurrencyAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Buying(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>