force-app/main/default/objects/AnkenMeisai__c/fields/AmountofTaxSelling3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxSelling3rdCurrency__c</fullName>
    <formula>TotalAmountofSelling3rdCurrency__c *  TaxInitial__c 
 +TaxSelling3rdCurrencyAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Selling(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>