force-app/main/default/objects/AnkenMeisai__c/fields/AmountPaid3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>AmountPaid3rdCurrency__c</fullName>
    <label>Amount Paid(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>