force-app/main/default/objects/AnkenMeisai__c/fields/AmountReceived3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>AmountReceived3rdCurrency__c</fullName>
    <label>Amount Received(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>