force-app/main/default/objects/AnkenMeisai__c/fields/AmountSellingInclTax3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTax3rdCurrency__c</fullName>
    <formula>TotalAmountofSelling3rdCurrency__c * (1 + TaxInitial__c) + TaxSelling3rdCurrencyAdjust__c + AmountSellingInclTax3rdCurrencyAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Selling Incl Tax(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>