force-app/main/default/objects/AnkenMeisai__c/fields/AmountSellingInclTax3rdCurrencyAdjust__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTax3rdCurrencyAdjust__c</fullName>
    <label>Amount Selling Incl Tax(3rd Currency)-Ad</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>