force-app/main/default/objects/AnkenMeisai__c/fields/AmountSellingLocalAdjustment__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingLocalAdjustment__c</fullName>
    <label>AMOUNT SELLING(LOCAL)-ADJUSTMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>