force-app/main/default/objects/AnkenMeisai__c/fields/AmountSellingUSDAdjustment__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingUSDAdjustment__c</fullName>
    <label>AMOUNT SELLING(USD)-ADJUSTMENT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>