force-app/main/default/objects/AnkenMeisai__c/fields/Anken__c.field-meta.xml
<CustomField>
    <fullName>Anken__c</fullName>
    <label>H B/L SHIPMENT ID</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>Anken</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>