force-app/main/default/objects/AnkenMeisai__c/fields/ANKEN_CBM__c.field-meta.xml
<CustomField>
    <fullName>ANKEN_CBM__c</fullName>
    <formula>Anken__r.CBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL H B/L MEASUREMENT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>