force-app/main/default/objects/AnkenMeisai__c/fields/ApprovaStatusForBuying__c.field-meta.xml
<CustomField>
    <fullName>ApprovaStatusForBuying__c</fullName>
    <label>Approval Status for Buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APPROVAL_STATUS</valueSetName>
    </valueSet>
</CustomField>