force-app/main/default/objects/AnkenMeisai__c/fields/Ararigaku__c.field-meta.xml
<CustomField>
    <fullName>Ararigaku__c</fullName>
    <formula>ROUND(SellAmountJPN__c,0) - ROUND(BuyAmountJPN__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit(Local)=Total Amount of Selling(Local)-Total Amount of Buying(Local). If case Exchange Rate-Selling is the greater than Exchange Rate-Buying, the special profit from Exchange Rate differences is added into Profit(Local).</inlineHelpText>
    <label>PROFIT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>