force-app/main/default/objects/AnkenMeisai__c/fields/BadDebt__c.field-meta.xml
<CustomField>
    <fullName>BadDebt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bad Debt</label>
    <referenceTo>BadDebt__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>FMSBill</relationshipName>
    <type>Lookup</type>
</CustomField>