force-app/main/default/objects/AnkenMeisai__c/fields/BankAccountForPayment__c.field-meta.xml
<CustomField>
    <fullName>BankAccountForPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT FOR PAYMENT</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BankAccount__c.InternalBankAccount__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>F/TMS Bill (BANK ACCOUNT FOR PAYMENT)</relationshipLabel>
    <relationshipName>INVOICING1</relationshipName>
    <type>Lookup</type>
</CustomField>