force-app/main/default/objects/AnkenMeisai__c/fields/BANKTRANSITTYPE__c.field-meta.xml
<CustomField>
    <fullName>BANKTRANSITTYPE__c</fullName>
    <label>PAYMENT TYPE-SELLING</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>口座振込</fullName>
                <default>true</default>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>現金</fullName>
                <label>Cash</label>
            </value>
            <value>
                <fullName>相殺</fullName>
                <label>Payment Offset</label>
            </value>
            <value>
                <fullName>Deposit Offset</fullName>
            </value>
            <value>
                <fullName>小切手受領（当社口座へ入金前）</fullName>
                <label>Cheque (Received but not Claimed)</label>
            </value>
            <value>
                <fullName>小切手入金（当社口座へ入金完了）</fullName>
                <label>Cheque (Received and Claimed)</label>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>