force-app/main/default/objects/AnkenMeisai__c/fields/BeneficiaryBuyingContact__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryBuyingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BENEFICIARY-BUYING CONTACT</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.actual_payer__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>FMSBillBeneficiaryBuyingContact</relationshipName>
    <type>Lookup</type>
</CustomField>