force-app/main/default/objects/AnkenMeisai__c/fields/Bikou__c.field-meta.xml
<CustomField>
    <fullName>Bikou__c</fullName>
    <inlineHelpText>If there were any information which should be shared in internal staffs, fill in this field</inlineHelpText>
    <label>NOTES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>