force-app/main/default/objects/AnkenMeisai__c/fields/BillNameForInternal__c.field-meta.xml
<CustomField>
    <fullName>BillNameForInternal__c</fullName>
    <label>BILL NAME FOR INTERNAL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>