force-app/main/default/objects/AnkenMeisai__c/fields/BuyACSetProcess__c.field-meta.xml
<CustomField>
    <fullName>BuyACSetProcess__c</fullName>
    <label>Buying AC Setting Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BuyACSetProcess</valueSetName>
    </valueSet>
</CustomField>