force-app/main/default/objects/AnkenMeisai__c/fields/BuyAmountJPN__c.field-meta.xml
<CustomField>
    <fullName>BuyAmountJPN__c</fullName>
    <formula>ROUND(Suryo__c * BuyTankaJPY__c,0) + TotalAmountofBuyingLocalAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Buying(Local)=Unit Price of Buying(Local)*Charge Unit (Total). This amount is before tax. If Tax-free or Non-tax, Total Amount of Buying(Local) will be equal to Amount Buying including Tax(Local).</inlineHelpText>
    <label>TOTAL AMOUNT OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>