force-app/main/default/objects/AnkenMeisai__c/fields/BuyAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyAmountUSD__c</fullName>
    <formula>ROUND(Suryo__c * BuyTankaUSD__c,3) +TotalAmountofBuyingFCYAdjust__c
/*
clofor_com_cfs__Suryo__c * if( ISNULL(clofor_com_cfs__BuyTankaUSD__c), 0, clofor_com_cfs__BuyTankaUSD__c ) + clofor_com_cfs__Cost_Allocation_Margin_USD__c
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Selling(FCY)=Unit Price of Selling(Local)*Charge Unit (Total).</inlineHelpText>
    <label>TOTAL AMOUNT OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>