force-app/main/default/objects/AnkenMeisai__c/fields/BuyDetail__c.field-meta.xml
<CustomField>
    <fullName>BuyDetail__c</fullName>
    <label>PAYMENT NOTES-BUYING</label>
    <type>TextArea</type>
</CustomField>