force-app/main/default/objects/AnkenMeisai__c/fields/BuyDifferentiation__c.field-meta.xml
<CustomField>
    <fullName>BuyDifferentiation__c</fullName>
    <formula>BuyInTaxAmountJPY__c - Siharaigaku__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Balance of Buying(Local)=Amount Buying including Tax(Local)-Amount Paid-Buying(Local)</inlineHelpText>
    <label>UNPAID BALANCE OF BUYING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>