force-app/main/default/objects/AnkenMeisai__c/fields/buying_credit_category_accouting__c.field-meta.xml
<CustomField>
    <fullName>buying_credit_category_accouting__c</fullName>
    <label>BUYING-THE CREDIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>買掛</fullName>
                <label>ACCOUNTS PAYABLE</label>
            </value>
            <value>
                <fullName>普通預金</fullName>
                <label>ORDINARY ACCOUNT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>