force-app/main/default/objects/AnkenMeisai__c/fields/buying_credit_tax_type_accounting__c.field-meta.xml
<CustomField>
    <fullName>buying_credit_tax_type_accounting__c</fullName>
    <label>BUYING-TAX CATEGORY FOR THE CREDIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>対象外</fullName>
                <label>OUT OF SCOPE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>