force-app/main/default/objects/AnkenMeisai__c/fields/buying_debit_tax_type_accounting__c.field-meta.xml
<CustomField>
    <fullName>buying_debit_tax_type_accounting__c</fullName>
    <label>BUYING-TAX CATEGORY FOR THE DEBIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>課対仕入込8%</fullName>
                <label>COSTS INCLUDED TAX(8%)</label>
            </value>
            <value>
                <fullName>対外仕入</fullName>
                <label>COSTS OUT OF SCOPE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>