force-app/main/default/objects/AnkenMeisai__c/fields/BuyingBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>BuyingBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>BUYING BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>