force-app/main/default/objects/AnkenMeisai__c/fields/BuyingCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>BuyingCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>BUYING_CREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>