force-app/main/default/objects/AnkenMeisai__c/fields/BuyingDebitAccoutingCode__c.field-meta.xml
<CustomField>
    <fullName>BuyingDebitAccoutingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>BUYING_DEBIT</relationshipName>
    <type>Lookup</type>
</CustomField>