force-app/main/default/objects/AnkenMeisai__c/fields/BuyingVATDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>BuyingVATDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING VAT DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>BuyingVATDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>