force-app/main/default/objects/AnkenMeisai__c/fields/BuyInTaxAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyInTaxAmountUSD__c</fullName>
    <formula>BuyAmountUSD__c + BuyTaxNum_USD__c + AmountBuyingUSDAdjustment__c
/* till Jan 4 , 2019
clofor_com_cfs__BuyAmountUSD__c * (1 + clofor_com_cfs__BuyTaxInitial__c) + clofor_com_cfs__USDTaxAdjustment__c

*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT BUYING INCLUDING TAX(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>