force-app/main/default/objects/AnkenMeisai__c/fields/BuyTaxNum_USD__c.field-meta.xml
<CustomField>
    <fullName>BuyTaxNum_USD__c</fullName>
    <formula>ROUND(BuyAmountUSD__c * BuyTaxInitial__c,3) + USDTaxAdjustment__c
/*
/*
IF (clofor_com_cfs__Tariff__r.clofor_com_cfs__wkTaxFlag__c,
clofor_com_cfs__BuyAmountUSD__c * clofor_com_cfs__BuyTaxInitial__c + clofor_com_cfs__USDTaxAdjustment__c + clofor_com_cfs__TAX_ADJUSTMENT__c,
0
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT OF TAX-BUYING(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>