force-app/main/default/objects/AnkenMeisai__c/fields/BY_PASS_VALIDATION_RULE__c.field-meta.xml
<CustomField>
    <fullName>BY_PASS_VALIDATION_RULE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BY PASS VALIDATION RULE</label>
    <type>Checkbox</type>
</CustomField>