force-app/main/default/objects/AnkenMeisai__c/fields/Cargo_status_is_changed__c.field-meta.xml
<CustomField>
    <fullName>Cargo_status_is_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargo status is changed</label>
    <type>Checkbox</type>
</CustomField>