force-app/main/default/objects/AnkenMeisai__c/fields/ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnit__c</fullName>
    <inlineHelpText>Set in case Charge Unit is different from Charge Unit in Service.</inlineHelpText>
    <label>Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitType</valueSetName>
    </valueSet>
</CustomField>