force-app/main/default/objects/AnkenMeisai__c/fields/ChargeUnitFormula__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnitFormula__c</fullName>
    <formula>/*IF(TEXT( clofor_com_cfs__ContainerSize__c) != NULL 
, TEXT( clofor_com_cfs__ContainerSize__c) 
, IF(TEXT( clofor_com_cfs__ChargeUnit__c ) != NULL 
  , TEXT( clofor_com_cfs__ChargeUnit__c ) 
  , TEXT( clofor_com_cfs__Tariff__r.clofor_com_cfs__UNIT__c )
  )
)*/


IF(TEXT( ChargeUnit__c ) != NULL 
, TEXT( ChargeUnit__c ) 
, TEXT( Tariff__r.UNIT__c )
)</formula>
    <label>Charge Unit-Formula</label>
    <type>Text</type>
</CustomField>