force-app/main/default/objects/AnkenMeisai__c/fields/ChargeUnitInPrint__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnitInPrint__c</fullName>
    <label>Charge Unit in Print</label>
    <length>100</length>
    <type>Text</type>
</CustomField>