force-app/main/default/objects/AnkenMeisai__c/fields/CollectDueDateAutoSetting__c.field-meta.xml
<CustomField>
    <fullName>CollectDueDateAutoSetting__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Collection Due Date will be automatically set based on Payment Base Date and Payment Condition from Base Date of Invoice To.</inlineHelpText>
    <label>Collection Due Date Auto Setting</label>
    <type>Checkbox</type>
</CustomField>