force-app/main/default/objects/AnkenMeisai__c/fields/ContainerID__c.field-meta.xml
<CustomField>
    <fullName>ContainerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTAINER ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Anken__c</field>
            <operation>equals</operation>
            <valueField>Container_Info__c.HBL_SHIPMENT__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Container_Info__c</referenceTo>
    <relationshipName>INVOICING</relationshipName>
    <type>Lookup</type>
</CustomField>