force-app/main/default/objects/AnkenMeisai__c/fields/ContainerSizeFormula__c.field-meta.xml
<CustomField>
    <fullName>ContainerSizeFormula__c</fullName>
    <formula>IF(TEXT( ContainerSize__c ) != NULL 
, TEXT( ContainerSize__c ) 
, TEXT( Tariff__r.ContainerSize__c )
)</formula>
    <label>Container Size-Formula</label>
    <type>Text</type>
</CustomField>