force-app/main/default/objects/AnkenMeisai__c/fields/Cost_Allocation_Catetory__c.field-meta.xml
<CustomField>
    <fullName>Cost_Allocation_Catetory__c</fullName>
    <inlineHelpText>Input the allocation category which corresponds with the category of this buying</inlineHelpText>
    <label>Cost Allocation Catetory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Cost allocation</fullName>
            </value>
            <value>
                <fullName>Carrier Cost Allocation</fullName>
            </value>
            <value>
                <fullName>Warehouse Cost Allocation</fullName>
            </value>
            <value>
                <fullName>Carrier Cost Allocation(TAX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>