force-app/main/default/objects/AnkenMeisai__c/fields/CountOfOfConnectedTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>CountOfOfConnectedTrxPlan__c</fullName>
    <label>Count of Connected Trx Plan</label>
    <summaryForeignKey>FMSBillPayReq__c.FMSBillID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>