force-app/main/default/objects/AnkenMeisai__c/fields/CreditIssueDate__c.field-meta.xml
<CustomField>
    <fullName>CreditIssueDate__c</fullName>
    <label>Credit Issue Date</label>
    <type>Date</type>
</CustomField>