force-app/main/default/objects/AnkenMeisai__c/fields/CreditNo__c.field-meta.xml
<CustomField>
    <fullName>CreditNo__c</fullName>
    <label>Credit No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>